deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: django-deployement
  labels:
    app: django1
  namespace: ingress-nginx
  
spec:
  replicas: 2
  selector:
    matchLabels:
      app: django

  template:
    metadata:
      labels:
        app: django
    spec:
      containers:
        - name: django-image2
          image: amandeep57/django-app:latest
          ports:
            - containerPort: 8001
