service.yaml
apiVersion: v1
kind: Service
metadata:
  name: django-service
  
spec:
  type: NodePort
  selector:
    app: django
  ports:
    - protocol: TCP
      port: 8001
      targetPort: 8000
      #nodePort: 32220
